ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "blue-hello-world-ingress"
  #namespace: default
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    nginx.ingress.kubernetes.io/rewrite-target: /
    #alb.ingress.kubernetes.io/scheme: internet-facing
    #alb.ingress.kubernetes.io/tags: Environment=dev,Team=app
spec:
  rules:
    - host: "test.ahan.world"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "my-service"
                port:
                  number: 80
